corrected z-index header and added padding for logo in popup pdp

--- a/header/stylesheets/sass/usp.scss
+++ b/header/stylesheets/sass/usp.scss
@@ -111,7 +111,7 @@
 
 		.campaign_menu_bottom .container .campaign_image {
 		  position: fixed;
-		  z-index: 9999;
+		  z-index: 100;
 		}
 
 		#container-usp ul span { color: #fe9122; }
